[package]
name = "docker"
version = "0.1.0"
authors = ["Blaine <rishi1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rillrate = "0.23.1"
shiplift = "0.7"
meio = "0.84.0"
async-trait = "0.1.48"
anyhow = "1.0.38"
tokio = "1.3.0"