[package]
name = "proc"
version = "0.1.0"
authors = ["Blaine <rishi1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rillrate = "0.23.0"
sysinfo = "0.16.4"
ctrlc = { version = "3.0", features = ["termination"] }
meio = "0.84.0"
async-trait = "0.1.48"
anyhow = "1.0.38"
tokio = "1.3.0"
env_logger = "0.8.3"
